--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #3c4e18;
+  background-color: #2f6bb0;
   color: white;
   text-align: center;
  
@@ -92,14 +92,14 @@ body {
 .btn{
 	display: block;
 	width: 100%;
-	height: 50px;
+	height: 100px;
 	border-radius: 25px;
 	outline: none;
 	border: none;
 	background-image: #f1efe0;
     background-size: 200%;
 	font-size: 1.2rem;
-	color: #3c4e18;
+	color: #2f6bb0;
     font-family: Google Sans, Noto, Roboto, Helvetica Neue, sans-serif;
 	text-transform: uppercase;
 	margin: 1rem 0;
